--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,19 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Toggle?
+.env
+prisma/migrations
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
-
-# testing
-/coverage
+npm-debug.log*
 
 # next.js
 /.next/
 /out/
 
-# production
-/build
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
 # misc
 .DS_Store
 *.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
